add engine/physics folder move spring_mass_damper to this folder

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -101,11 +101,13 @@ set(ENGINE_CODE
     ${SEEK_ENGINE_SOURCE_DIR}/math/ray.h
     ${SEEK_ENGINE_SOURCE_DIR}/math/ray.cpp
     ${SEEK_ENGINE_SOURCE_DIR}/math/rect.h
-    ${SEEK_ENGINE_SOURCE_DIR}/math/spring_mass_damper.cpp
-    ${SEEK_ENGINE_SOURCE_DIR}/math/spring_mass_damper.h
     ${SEEK_ENGINE_SOURCE_DIR}/math/transform.h
     ${SEEK_ENGINE_SOURCE_DIR}/math/transform.cpp
     ${SEEK_ENGINE_SOURCE_DIR}/math/vector.h
+
+    # physics
+    ${SEEK_ENGINE_SOURCE_DIR}/physics/spring_mass_damper.h
+    ${SEEK_ENGINE_SOURCE_DIR}/physics/spring_mass_damper.cpp
     
     # rhi
     ${SEEK_ENGINE_SOURCE_DIR}/rhi/base/rhi_object.h
