--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -78,4 +78,5 @@ add_sample_project(04.Lighting)
 add_sample_project(05.DeferredShading)
 add_sample_project(06.GlobalIllumination)
 add_sample_project(07.LiquidGlass)
+add_sample_project(08.MetballWater)
 
